# FlowchartGame

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: windows-arm-exe.yml  windows-exe.yml
src/flow_game/: __init__.py  __main__.py  cli.py  game.py  sdl2_game.py  sdl3_game.py  sdl_compat.py
tests/: test_game.py  test_sdl2_routing.py  test_sdl3_routing.py
